added pulling past messages

--- a/package.json
+++ b/package.json
@@ -10,22 +10,28 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@nanostores/react": "github:ai/react",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.29.0",
+    "ai": "^3.0.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.7",
     "lucide-react": "^0.365.0",
     "next": "14.1.4",
+    "openai": "^4.33.0",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hot-toast": "^2.4.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
