added cloudstorage, pinecone, vector embedding

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.12",
+    "@google-cloud/storage": "^7.9.0",
     "@nanostores/react": "github:ai/react",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^2.2.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.29.0",
     "ai": "^3.0.19",
@@ -18,9 +21,14 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.7",
+    "html-to-text": "^9.0.5",
+    "jspdf": "^2.5.1",
+    "langchain": "^0.1.31",
     "lucide-react": "^0.365.0",
+    "md5": "^2.3.0",
     "next": "14.1.4",
     "openai": "^4.33.0",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.5",
     "postgres": "^3.4.4",
     "react": "^18",
