--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
     "@types/node": "^20",
     "@types/pg": "^8.11.4",
     "@types/react": "^18",
