--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@types/html-to-text": "^9.0.4",
+    "@types/md5": "^2.3.5",
     "@types/node": "^20",
     "@types/pg": "^8.11.4",
     "@types/react": "^18",
